# ae-core

./: CMakeLists.txt
src/: CMakeLists.txt  ae_core-config.cmake
src/memory/: layout.h
src/pp/: count.h  foreach.h  typed_expression.h
src/simd/: types.h
test/: CMakeLists.txt  simd_types.cc
